updated at: 2023-04-25 20:27, SuperRealLoveDistModeCheckシェーダー - がとーしょこらのおみせ - BOOTH

--- a/VRChat/51/995951.html
+++ b/VRChat/51/995951.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "YfAcVNc8UhaP5rEI94y9ZNIE2X5ZZ5zq2aXAyWN1OYQ="></script>
+    "f07bxJYrU5getA8IRTm5kM/lfw/FVGDpj6NvidYUbtM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"SuperRealLoveDistModeCheckシェーダー","description":"主にVRChatで超ガチ恋距離モードが適用されているワールドか判定するために作りました。\n超ガチ恋距離モードが適用されているとこのシェーダーを割り振ったオブジェクトが表示されます。\n各ワールドの調査やかわいい動きをするときの目安になるかもしれないです。\n\n使用例↓\nhttps://twitter.com/gatosyocora/status/1034047282281238529\n(商品紹介の画像や使用例に写っている右近ちゃん(キツネツキ(kitsune_tsuki)様作)は同封しておりません)\n\n設定可能なパラメータは以下の通りです。\n・Texture : 表示されるテクスチャ\n・Editing : 編集中に位置調整するために使います\n\nCC0ライセンスですので商用利用・改変・再配布など可能です。\n\nBoost用もありますが、内容物は変わりません。","url":"https://booth.pm/ja/items/995951","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/5daaaeb1-43fa-4c89-8da3-e7e44093dddb/i/995951/7f3116d9-c81b-4ee3-bd12-c6ea231846ec_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="YfAcVNc8UhaP5rEI94y9ZNIE2X5ZZ5zq2aXAyWN1OYQ="></script>
+    nonce="f07bxJYrU5getA8IRTm5kM/lfw/FVGDpj6NvidYUbtM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/995951/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               68
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/995951/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               68
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
