updated at: 2023-04-25 20:27, 竹流式お菓子セット - 空創緑林館BOOTH店 - BOOTH

--- a/VRChat/29/995529.html
+++ b/VRChat/29/995529.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "fv1PLSMhrQFF7+gwG1u28gEDCoHdmY8P5sAoPm5ySzE="></script>
+    "XfBLvvLZQhh7sja3i4ATzE8POMCo4UMy5Puz0dETS4g="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"竹流式お菓子セット","description":"　★　竹流式お菓子セット　★\n\n本モデルは主に以下の用途での使用を想定しております。\n\n　・VRアバター利用\n　・Unityゲーム作成\n　・動画、映像作成\n　・静止画作成\n　・Vtuber活動\n\nモデルやテクスチャの改変は自由に行っていただいて構いません。\n\n営利・非営利問わずご利用いただけますが、営利目的・商用利用の場合は改変の有無にかかわらずクレジット記載（竹流式お菓子セット@airgreennet）が必要です。\n※ご自身に金銭などの報酬が得られる場合はクレジット必要\n\nVRchat内で撮影された動画、スクリーンショットの映り込みに関してはクレジット不要です。\n他者の行っている凸待ち配信などへの参加はクレジット不要です。\n\n\n　●　同梱物一覧　●\n\n・FBXファイル10個\n　　ビスケット\n　　キャンディ\n　　お花クッキー\n　　星クッキー\n　　スマイルクッキー\n　　マカロンクリーム色\n　　マカロン緑色\n　　マカロン水色\n　　マカロンピンク\n　　上記9種全部入りFBX\n・テクスチャ3枚\n・改変用psdファイル3個\n\n\n　■　免責事項　■\n\n・この製品を利用して発生したトラブルに関しては、一切の責任を負いません。\n\n　■　禁止事項　■\n\n・改変の有無に関わらず、本モデルデータを再配布する行為\n（再配布とは本製品のモデルデータを直接利用可能な状態で第三者に配布する行為を指します。\n　なお、VRchat上でのアバターペデスタルでの利用に関しては許可します。）\n・公序良俗に反する行為、政治・宗教活動、誹謗中傷目的での使用\n\n\n2018/8/30　リリース\n\n\n竹流\n空創緑林館　http://airgreen.net/\nTwitter　https://twitter.com/airgreennet\npixiv　https://www.pixiv.net/member.php?id=39794","url":"https://booth.pm/ja/items/995529","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/7dbcb1ac-257b-4189-ab1a-4aa38dcc29f7/i/995529/24cb1258-e9c6-43e9-8c9d-682e0feec224_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="fv1PLSMhrQFF7+gwG1u28gEDCoHdmY8P5sAoPm5ySzE="></script>
+    nonce="XfBLvvLZQhh7sja3i4ATzE8POMCo4UMy5Puz0dETS4g="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,7 +173,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/995529/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               94
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/995529/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               94
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
