--- a/VRChat/68/995268.html
+++ b/VRChat/68/995268.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "+RvbzuTmkxxEuGmHVINfvpxSfl5O4l+1opdUwCKS0FA="></script>
+    "P7rThsMm0wnGVTXLSiVChBS2pZD/5/tTUqAfVEKdnMU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"初心者用コサージュ","description":"モデリングツールに手を出していないVRChatプレイヤーで購入したアバターにワンポイントおしゃれをしたい人向けにシェイプキーで変形可能な花飾りを作りました。\nコサージュ・指輪・両方合わせてカーブをかけてヘアピンにも使えます。\nテクスチャは、色変更技術保持者向けのオマケです。\n様子見したいので、先行購入者限定無料配布です。\n小物の癖に1250ポリゴンあるのでご注意ください...\n需要があれば今後もいろいろ作るかもしれません。\nご意見、ご要望お待ちしております。\nTwitter：@Yuzuki_Tatikawa","url":"https://booth.pm/ja/items/995268","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/398453f0-c317-488e-9f19-c38eb6274343/i/995268/24fb9813-8989-48ef-9cd6-e2c7a75c126e_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="+RvbzuTmkxxEuGmHVINfvpxSfl5O4l+1opdUwCKS0FA="></script>
+    nonce="P7rThsMm0wnGVTXLSiVChBS2pZD/5/tTUqAfVEKdnMU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/995268/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               17
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/995268/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               17
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
