--- a/VRChat/06/995106.html
+++ b/VRChat/06/995106.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "zHa7CBF+ZmXXW+SaJv802X8vaWd29F7Ag9Fo8/905yQ="></script>
+    "AKD73HClLuMnYsyfYHDPxJvWcjf4I4V2esItjexTa90="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"万能首輪Ver02　ミントとミリさびカラー追加","description":"色々使える首輪Ver2\n\n新しくクッキーミントカラーとさびさびカラーを同梱\nそして、しっかりUV展開したので改変もしやすくなりました！\n\n誰かに仕えたい時・使えさせたい時・互いに縛りあいたい時などにどうぞ。\n\nこんなカラーがいいとかの案がありましたら\n@YUDUKITI_KOU2まで","url":"https://booth.pm/ja/items/995106","offers":{"priceCurrency":"JPY","@type":"Offer","price":"350"},"image":"https://booth.pximg.net/c/620x620/a446d8f7-127d-4117-a58c-d29e74abf52f/i/995106/79103953-d479-4bfb-aa34-29c3257ac6f8_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="zHa7CBF+ZmXXW+SaJv802X8vaWd29F7Ag9Fo8/905yQ="></script>
+    nonce="AKD73HClLuMnYsyfYHDPxJvWcjf4I4V2esItjexTa90="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/995106/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               189
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/995106/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               189
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
