--- a/VRChat/50/993550.html
+++ b/VRChat/50/993550.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "iRjsz48a27xoD9rqWEqgQM8iHeOICeYi6MGTkhFScvU="></script>
+    "Qn3dP1hk0RD2D0GSwd4rpZMc5L36MorFEh8xyCtO85Q="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[BP]スケートボード","description":"[BP]スケートボード　ver1.0\n\n●商品説明\nグラフィティペイント済みスケートボードとなります。\nペイントあり・なしの２種類を用意しております。\n\n●内容物\nReadme.txt　　　　　　　　　（はじめにお読みください）\nSkateboard.fbx　　　　　　　 (本体)\nSkateboard_○○_Albedo.png　（Albedoマップ）\nSkateboard_○○_Metallic.png（Metallicマップ）\nSkateboard_○○_Normal.png　（Normalマップ）\nSkateboard.unitypackage\n\nポリゴン数:3274\n\n●利用規約\n改変・商用利用は可となります。\n＊取り出せる形での配布は禁止となります。\n\n【免責事項】\nこの製品を利用して発生したトラブルに関しては、一切の責任を負いません。\n\n何かご質問がありましたらTwitter:@buchipanda_VRまでご連絡をお願いします。","url":"https://booth.pm/ja/items/993550","offers":{"priceCurrency":"JPY","@type":"Offer","price":"400"},"image":"https://booth.pximg.net/c/620x620/aabbb614-482e-4b6d-8e57-4b27696be81e/i/993550/1742fba3-7e3f-44b5-83ea-6f54b313a4c1_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="iRjsz48a27xoD9rqWEqgQM8iHeOICeYi6MGTkhFScvU="></script>
+    nonce="Qn3dP1hk0RD2D0GSwd4rpZMc5L36MorFEh8xyCtO85Q="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/993550/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               59
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/993550/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               59
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
