--- a/VRChat/97/993497.html
+++ b/VRChat/97/993497.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "xfrVT2Bd0jc/X8JtHvEVCPgbIZWuJWUFQ/MySk+UMhc="></script>
+    "lQ8sjS9OClS/HX5nmN2XqEARRBV3LiRQ877ongaIoSE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ウエリントン　メガネ","description":"VRchat向けアクセサリ　ウエリントンメガネフレームです\nもっとVRchatで眼鏡流行って！！！って気持ちで作りました\n\n■導入方法\nUnityPackageでの配布になります\nAssets→ImportPackege→CustomPackegeから読み込むだけで\nProjectに導入出来ます\n\n■使用方法\nサイズか小さめなのでスケールをキャラに合わせて調整ください\nメガネをHeadの子にすることでキャラにメガネを掛けているように出来ます\nサンプル画像上からCubedParadox,Standard,Unlitのマテリアルです\nTexture無し、Standardシェーダーなのでお好みのマテリアルを制作して使用してください\n\n■ポリゴン数：866\n\n■商用利用・私的利用に対してご自由にお使いください\nそのままの再配布はお止めください\n\n■ご不明な点ありましたら、Twitetr@_wtpcまでご連絡いただければ幸いです","url":"https://booth.pm/ja/items/993497","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/a1e47a5c-c994-4f91-9f96-57dc100ca505/i/993497/8cef2123-dca9-484b-8def-82cfb507f66a_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="xfrVT2Bd0jc/X8JtHvEVCPgbIZWuJWUFQ/MySk+UMhc="></script>
+    nonce="lQ8sjS9OClS/HX5nmN2XqEARRBV3LiRQ877ongaIoSE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/993497/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               268
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/993497/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               268
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
