--- a/VRChat/44/992944.html
+++ b/VRChat/44/992944.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "37O2CjIod2SZPM/xHUsGeOJ2PeJYV0sFt/oG5Cf5hwA="></script>
+    "GkSB6pWH40X7uLee/D2TdvHCS0wO3K7LX9lvSFb+jSA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向けモデル】魔物B","description":"【VRChat向けモデル】魔物B\nマスコット的な魔物モデルです。\nVRChatのアバターで使ったり、ワールドに置いたり、ゲームのやられ役にしたりご自由にお使いください。\n\nポリゴン数：1864ポリゴン\nマテリアル数：1\nテクスチャ数：1\n表情シェイプキー：5種\nリップシンク：無し\n\n\n【内容】\nFBX：本モデルFBX、テクスチャ\nUnityPackage：Humanoid設定済みモデル、表情アニメーション5種\n\n\n【利用規約】\n営利、非営利問わず使用を許可。\n改変、再配布、VRChatのペデスタル等への使用を許可。\n\n他人が不快に思う行為に使用することを一切禁止します。","url":"https://booth.pm/ja/items/992944","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/caf3bb4c-ffdb-4c61-b7f6-afae273c5993/i/992944/58ef3179-5048-414f-ba74-dc8b18abb09d_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="37O2CjIod2SZPM/xHUsGeOJ2PeJYV0sFt/oG5Cf5hwA="></script>
+    nonce="GkSB6pWH40X7uLee/D2TdvHCS0wO3K7LX9lvSFb+jSA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/992944/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               24
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/992944/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               24
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
