--- a/VRChat/45/992645.html
+++ b/VRChat/45/992645.html
@@ -73,9 +73,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "pPaMofX9IvnmNPYkcwEv2akp0lgyK8ue1eBCx2odinE="></script>
+    "V2O17Md4v3Sz9PMkmChuJDP1D4PRu1AdckLkgFNdTWY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"はにわっぽいお面","description":"これであなたも埴輪の仲間入り。\n\n本データを使用して発生した、いかなる損害・損失・その他不利益等には、当方は一切の責任を負いません。","url":"https://booth.pm/ja/items/992645","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/2f99e6a5-825d-4d36-b20e-398413d0f73f/i/992645/df0972de-d4ed-4ee8-a8c4-2b206b0c92a4_base_resized.jpg"}
     </script>
@@ -89,7 +89,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="pPaMofX9IvnmNPYkcwEv2akp0lgyK8ue1eBCx2odinE="></script>
+    nonce="V2O17Md4v3Sz9PMkmChuJDP1D4PRu1AdckLkgFNdTWY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -113,6 +113,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/992645/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               39
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/992645/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               39
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
