--- a/VRChat/69/992669.html
+++ b/VRChat/69/992669.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "EyG24sPfqUFzR4l7kvjLPu1MUA83XIIWaPdvWtmNsK4="></script>
+    "zB18v1aeWUSQZH8N2r6h01tgpG1MU510EP022ZK17Dc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[3Dモデル]眼鏡_001","description":"\u003c説明\u003e\n眼鏡の3Dモデルです。\n\nフロント部分とつる部分に分かれています。\nモデルに合わせて調節してご利用ください。\n\nマテリアルもご自由に。\n\nアリシア・ソリッドをモデルとして作成しました。\n配布データにアリシア・ソリッドのモデルは含まれていません。\n\n\u003c内容\u003e\n・FBXファイル\n\n\u003c仕様\u003e\n・ポリゴン数：1157（front : 693, side : 464[232]）\n・テクスチャ：なし（マテリアルのみ）\n\n\u003c利用規約\u003e\n・著作表示：不要\n・非商用利用：可\n・商用利用：可\n・改変：可\n・再配布：未改変のみ可","url":"https://booth.pm/ja/items/992669","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/e25a78ad-8565-40d2-bfbf-01c215da6408/i/992669/4c6c2b47-7f31-4257-8411-9bb60c4d2e05_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="EyG24sPfqUFzR4l7kvjLPu1MUA83XIIWaPdvWtmNsK4="></script>
+    nonce="zB18v1aeWUSQZH8N2r6h01tgpG1MU510EP022ZK17Dc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/992669/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               97
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/992669/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               97
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
