updated at: 2023-04-25 20:30, サイバーパンク風ガスマスク（VRChat向けアクセサリー） - Megalo Arms corp. - BOOTH

--- a/VRChat/34/991334.html
+++ b/VRChat/34/991334.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "9D1QsFGQQ8NUQZgovrh0tG58UaTmZEfYBIxIYHAlw4A="></script>
+    "gdIQANHDZwY9TXPgrqJ56sBvFbAsvxWDRPcE03CsMIc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"サイバーパンク風ガスマスク（VRChat向けアクセサリー）","description":"ハードサーフェスな見た目のサイバーパンク風ガスマスクです。\nVRChatでの使用を想定して制作しました。\nフィルターにあたる部分の形状は二種類、カラーバリエーションは４つ用意してあります。好みの組み合わせをお使いください。\nシェーダはstandardを想定して制作していますがお好みものをご使用ください。\n\n三角面数・808(総合)\nマテリアル数・1","url":"https://booth.pm/ja/items/991334","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/fd5759e4-ba4e-4d8b-95f2-d86f545aef0c/i/991334/4c873716-2b45-4def-a7a4-85968c7e7b85_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="9D1QsFGQQ8NUQZgovrh0tG58UaTmZEfYBIxIYHAlw4A="></script>
+    nonce="gdIQANHDZwY9TXPgrqJ56sBvFbAsvxWDRPcE03CsMIc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/991334/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               202
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/991334/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               202
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
