updated at: 2023-04-25 20:32, [VRChat対応]レトロボ[Voxelモデル] - カラスの巣箱 - BOOTH

--- a/VRChat/77/987577.html
+++ b/VRChat/77/987577.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "LkqqsmSVy9fZ233fev60EhDBAw9qJrcb0gmBAXlyLIk="></script>
+    "lG4pZhgb5/Mz7OECQS8nU2rrdBxzpXts8Uay1r6ZxDI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRChat対応]レトロボ[Voxelモデル]","description":"少しレトロな雰囲気をしたVoxelロボット「レトロボ」です\n角ばってどこか間の抜けた表情のロボットを、あなたも身に纏ってみませんか？\n\n2018/11/15\n頭の横が回るアニメーションや、光るとかっこいい場所などを別メッシュに分離、一部形状の調整などをしたレトロボの新バージョンを追加しました\n内容物拡充のため販売価格を変更いたしました\n\n2018/11/17\n・VRChatのUnityバージョン変更を前にテクスチャの圧縮を調整","url":"https://booth.pm/ja/items/987577","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1800"},"image":"https://booth.pximg.net/c/620x620/6c72616e-1bae-4cce-bcc9-c341106fcced/i/987577/3b94aae1-8df7-4032-9b00-179b13915833_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="LkqqsmSVy9fZ233fev60EhDBAw9qJrcb0gmBAXlyLIk="></script>
+    nonce="lG4pZhgb5/Mz7OECQS8nU2rrdBxzpXts8Uay1r6ZxDI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -141,6 +141,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -184,7 +186,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/987577/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               5
@@ -199,14 +201,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/987577/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               5
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
