updated at: 2023-04-25 20:32, 5.6.3p1VRC想定Clothスカートサンプル - メロンパンのショーケース - BOOTH

--- a/VRChat/96/987596.html
+++ b/VRChat/96/987596.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "T8BmfN+6MfOWTQSL1xt0sLkxK2LXuBolIqnXvxGBAVA="></script>
+    "ON6WJTb+XuJTW17R+jZfFUWWlyvrc2OGo34K9NeE1Ss="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"5.6.3p1VRC想定Clothスカートサンプル","description":"2021年現在、この方法は古いため、販売(ブースト版)を停止します。\n情報として残しますが、現在はお勧めしません。\n\nUnity5.6.3p1時代のVRChatで使用想定のCloth設定のサンプルです。\n情報共有が主な目的です。\n大抵の場合、そのまま流用はできないですが、一緒にClothとの和解を試みましょう。\n\nUnity上ではおよそ90度足を上げる所まで貫通せずに耐えますが、\nVRChatではClothの演算がローカルで行われるため、20fps以下ではコライダーを貫通して元に戻らないことが稀に起こります。\n\n対策として、スカートの位置リセット用にコライダーを抜くアニメーションも同梱していますので、セットでどうぞ。","url":"https://booth.pm/ja/items/987596","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"0"},"image":"https://booth.pximg.net/c/620x620/398453f0-c317-488e-9f19-c38eb6274343/i/987596/679f049a-a8be-497f-81d0-5f968262df1c_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="T8BmfN+6MfOWTQSL1xt0sLkxK2LXuBolIqnXvxGBAVA="></script>
+    nonce="ON6WJTb+XuJTW17R+jZfFUWWlyvrc2OGo34K9NeE1Ss="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/987596/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               394
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/987596/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               394
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
