updated at: 2023-04-25 20:33, Fictional Arms Pack Vol.1 - 四拾弐重工:販売所 - BOOTH

--- a/VRChat/69/987469.html
+++ b/VRChat/69/987469.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "kBVxOGDpTaC6/tkgH4jJFYrhROWzWn2rz0PgK4aVK+A="></script>
+    "UDjP7lcB/ljdCdUVJUZO3tfC8VnPQdePfUiFy7N7bUo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Fictional Arms Pack Vol.1","description":"Unity用武器モデルセット第一弾です.\nVRchatやゲーム制作等にご利用ください.\n\n内容\n・変形機能付き近接格闘用荷電粒子刀\n・二種類の小型荷電粒子射出装置","url":"https://booth.pm/ja/items/987469","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/9e316222-2e53-4586-9471-58ac96f0baec/i/987469/ae2cf8fa-f346-4cfd-9596-9892f96efb5e_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kBVxOGDpTaC6/tkgH4jJFYrhROWzWn2rz0PgK4aVK+A="></script>
+    nonce="UDjP7lcB/ljdCdUVJUZO3tfC8VnPQdePfUiFy7N7bUo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -122,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -136,7 +135,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -177,10 +177,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/987469/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              167
+                              168
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -192,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/987469/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              167
+                              168
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
