updated at: 2023-04-25 20:33, Energy Bullpup Rifle（エネルギー弾式ブルパップライフル） - 工房「The garden of Ash」 - BOOTH

--- a/VRChat/99/987199.html
+++ b/VRChat/99/987199.html
@@ -101,9 +101,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "Oej+sfm8EfQ/WO4OuO1a4Ubto57kyZPWUe3ll0HDS1c="></script>
+    "EDXnAaPgd+5KPRspJfI3HJjRFwToNmXPrUBcde6LgJA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Energy Bullpup Rifle（エネルギー弾式ブルパップライフル）","description":"[9/4 ver.2 リリース]\n当工房初のサイバー系銃火器のエネルギーブルパップライフルです。\nSketchfabで3Dモデルの閲覧ができます。\n\nポリゴン数　△2225\nテクスチャ数　2048*2048 4枚","url":"https://booth.pm/ja/items/987199","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/719c3d6d-7dd0-4162-aa85-2ed21e39cf9a/i/987199/d1ad9183-a26c-4a2c-94f8-0cc425f63532_base_resized.jpg"}
     </script>
@@ -114,7 +114,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Oej+sfm8EfQ/WO4OuO1a4Ubto57kyZPWUe3ll0HDS1c="></script>
+    nonce="EDXnAaPgd+5KPRspJfI3HJjRFwToNmXPrUBcde6LgJA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -142,6 +142,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -187,7 +189,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/987199/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               27
@@ -202,14 +204,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/987199/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               27
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
